--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Biology</h1>
         <p>Isn't a Real Science</p>
-        <a class="btnA" href="flights.html">Book Flights</a>
+        <a class="btnA" href="flights.html">Learn More</a>
       </div>
     </div>
 
@@ -22,103 +22,64 @@
           <li><a class="btnA" href="flights.html">Intro to Cells</a></li>
           <li><a class="btnA" href="frequentFlyerProgram.html">Energy and Transport in Cells</a></li>
           <li><a class="btnA" href="apply.html">Cell Division</a></li>
+          <li><a class="btnA" href="apply.html">Molecular Biology</a></li>
+          <li><a class="btnA" href="apply.html">Genetics</a></li>
         </ul>
       </div>
     </div>
 
     <div class="main">
       <div class="container">
-        <img src="planeboi2.png" alt="Plane Avatar" height="172" width="164">
-        <h2>About Us</h2>
-        <p>We are an airline company that flies to 13 cities in 7 different states in the central region of the US. These states include Colorado, Utah, Washington, Idaho, Montana, South Dakota, Wyoming, and Nebraska.</p>
-        <p>We have a fleet of 15 Airbus A320neos. These planes are comfortable single aisle aircraft that are kept in pristine condition by our top notch mechanical staff.</p>
-        <p>We have two different major destinations: Denver and Salt Lake City. These cities have a lot to offer.</p>
-        <p>Denver and the Denver Metropolitan Area is a beautiful place. The Rocky Mountains sit to the west of Denver. To the east are the Great Plains. South of Denver are cities which have top tourist destinations of their own. To the north of Denver is CSU and Wyoming.</p>
-        <p>The Salt Lake City region boasts beautiful views from every direction you face. Not only are there endless amounts of trails to hike on and bike, but there is also the Great Salt Lake, which is the largest lake west of the Mississippi River and the largest salt lake in the US.</p>
+        <h2>What is Biology</h2>
+        <p>Biology is the study of living things or the science of life. Within biology, there are many fields of biology including, but not limited to:</p>
+        <ul>
+          <li>Biochemistry</li>
+          <li>Botany</li>
+          <li>Cellular Biology</li>
+          <li>Ecology</li>
+          <li>Evolutionary Biology</li>
+        </ul>
       </div>
     </div>
 
-    <table align="center">
-      <tr>
-        <td>
-          <div class="container">
-            <a class="overlay_image"></a>
-              <img src="hotel2.jpg" alt="Hotel Room" class="image">
-              <div class="overlay">
-                <a class="text" href="frequentFlyerProgram.html">Check out more!</a>
-            </div>
-          </div>
-        </td>
-        <td>
-          <div class="container">
-              <a class="overlay_image"></a>
-                <img src="image.png" alt="Airbus a320neo" class="image">
-                <div class="overlay">
-                  <a class="text" href="frequentFlyerProgram.html">Loyalty Program</a>
-              </div>
-            </div>
-          </td>
-            <td>
-              <div class="container">
-                  <a class="overlay_image"></a>
-                    <img src="Denver.jpg" alt="Denver Skyline" class="image">
-                    <div class="overlay">
-                      <a class="text" href="flights.html">Book a Flight!</a>
-                  </div>
-                </div>
-              </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="container">
-                <a class="overlay_image"></a>
-                  <img src="sky.jpg" alt="Clouds During Sunset" class="image">
-                  <div class="overlay">
-                    <a class="text" href="flights.html">Check Weather Here</a>
-                </div>
-              </div>
-            </td>
-            <td>
-              <div class="container">
-                <a class="overlay_image"></a>
-                  <img src="airbus.jpg" alt="Airbus A320neo Nose" class="image">
-                  <div class="overlay">
-                    <a class="text" href="flights.html">Flights Details</a>
-                </div>
-              </div>
-            </td>
-            <td>
-              <div class="container">
-                <a class="overlay_image"></a>
-                  <img src="pilots.jpg" alt="Picture of Pilots" class="image">
-                  <div class="overlay">
-                    <a class="text" href="flights.html">Our Pilots!</a>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </table>
+    <div class="main">
+      <div class="container">
+        <h2>Topics Covered in Biology Class</h2>
+        <p>There are multiple topics covered in biology class. In first semester, the topics that will be covered include:</p>
+        <dl>
+          <dt>Foundations of Biology</dt>
+          <dd>- Defining Life</dd>
+          <dd>- Molecular Biology</dd>
+          <dt>Intro to Cells</dt>
+          <dd>- Background Info</dd>
+          <dd>- Cell Structures & Functions</dd>
+          <dt>Energy and Transport in Cells</dt>
+          <dd>- Transport</dd>
+          <dd>- Energy in Plants</dd>
+          <dd>- Energy in Animals</dd>
+          <dt>Cell Division</dt>
+          <dd>- Intro to Cell Division</dd>
+          <dt>Molecular Biology</dt>
+          <dd>- Reading Instructions</dd>
+          <dd>- Changes in DNA</dd>
+          <dt>Genetics</dt>
+          <dd>- Heredity</dd>
+          <dd>- Human Genetics</dd>
+        <dl>
+      </div>
+    </div>
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Stay Connected</h2>
-        <p>Receive weekly updates on new deals for you!</p>
-        <a class="btnA" href="frequentFlyerProgram.html">Join</a>
+        <h2>Biology is Fun</h2>
+        <p>Do you want a future in biology?</p>
+        <a class="btnA" href="frequentFlyerProgram.html">Learn More</a>
       </div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <p id="footer">&copy; Central Airlines</p>
+        <p id="footer">&copy; Clayton Johnson Productions</p>
       </div>
-
-      <div class="socialMedia">
-        <div class="container">
-          <a href="#!"><img class="btnA" src="Instagram.png" width="30" height="30"></a>
-          <a href="#!"><img class="btnA" src="f_logo_RGB-Blue_512.png" width="30" height="30"></a>
-          <a href="#!"><img class="btnA" src="Twitter_Social_Icon_Circle_Color.png" width="30" height="30"></a>
-          <a href="#!"><img class="btnA" src="yt_icon_rgb.png" width="43" height="30"></a>
-        </div>
-    </div>
   </body>
 </html>
