--- a/foundationsOfBiology.html
+++ b/foundationsOfBiology.html
@@ -18,7 +18,7 @@
     <div class="nav">
       <div class="container">
         <ul id="horizontal-list">
-          <li><a class="btnA" href="index.html">Foundations of Biology</a></li>
+          <li><a class="btnA" href="foundationsOfBiology.html">Foundations of Biology</a></li>
           <li><a class="btnA" href="flights.html">Intro to Cells</a></li>
           <li><a class="btnA" href="frequentFlyerProgram.html">Energy and Transport in Cells</a></li>
           <li><a class="btnA" href="apply.html">Cell Division</a></li>
@@ -83,6 +83,25 @@
           <dt>Competition</dt>
           <dd>- A relatinship between living things that depend on the same resources</dd>
           <dd>- Ex. Animals in a desert rely on water, but only the best get the little water that is in a desert</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <h2>Molecular Biology</h2>
+        <p>Molecular biology is the base of all biology for one main reason: all living things are made up of molecules</p>
+        <dl>
+          <dt>Carbon</dt>
+          <dd>- Carbon is essential to life on earth because of its ability to form stable bonds with many elements.</dd>
+          <dd>- Over 10 million carbon-based compounds</dd>
+          <dd>- Four major types of carbon-based compounds: carbohydrates, lipids, proteins, nucleic acids.</dd>
+          <dt>Carbohydrates</dt>
+          <dd>- </dd>
+          <dt>Proteins</dt>
+          <dt>Lipids</dt>
+          <dt>Nucleic Acid</dt>
+          <dt>Biochemical Reactions</dt>
         </dl>
       </div>
     </div>
