--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav">
       <div class="container">
         <ul id="horizontal-list">
-          <li><a class="btnA" href="index.html">Foundations of Biology</a></li>
+          <li><a class="btnA" href="foundationsOfBiology.html">Foundations of Biology</a></li>
           <li><a class="btnA" href="flights.html">Intro to Cells</a></li>
           <li><a class="btnA" href="frequentFlyerProgram.html">Energy and Transport in Cells</a></li>
           <li><a class="btnA" href="apply.html">Cell Division</a></li>
