--- a/foundationsOfBiology.html
+++ b/foundationsOfBiology.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Central Airlines</title>
+    <title>Biology</title>
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
 <link href="index.css" type="text/css" rel="stylesheet">
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Foundations Of Biology</h1>
         <p>Isn't a Real Science</p>
-        <a class="btnA" href="flights.html">Learn More</a>
+        <a class="btnA" href="index.html">Home</a>
       </div>
     </div>
 
@@ -93,15 +93,63 @@
         <p>Molecular biology is the base of all biology for one main reason: all living things are made up of molecules</p>
         <dl>
           <dt>Carbon</dt>
-          <dd>- Carbon is essential to life on earth because of its ability to form stable bonds with many elements.</dd>
-          <dd>- Over 10 million carbon-based compounds</dd>
-          <dd>- Four major types of carbon-based compounds: carbohydrates, lipids, proteins, nucleic acids.</dd>
+          <dd>Carbon is essential to life on earth because of its ability to form stable bonds with many elements.</dd>
+          <dd>Over 10 million carbon-based compounds</dd>
+          <dd>Four major types of carbon-based compounds: carbohydrates, lipids, proteins, nucleic acids.</dd>
           <dt>Carbohydrates</dt>
-          <dd>- </dd>
+          <dd>A carbohydrate is an organic compound such as sugar or starch, and is used to store energy.</dd>
+          <dd>Monosaccharides are simple sugars such as fructose or glucose.</dd>
+          <dd>Disaccharides are two monosaccharides bonded together</dd>
+          <dd>Polysaccharides are complex carbohydrate molecules that form when simple sugars bind together in a chain.</dd>
+          <dd>Complex carbohydrates have two main functions: storing energy and forming structures of living things</dd>
           <dt>Proteins</dt>
+          <dd>A protein is an organic compound made up of small molecules called amino acids</dd>
+          <dd>There are 20 different amino acids commonly found in the proteins of living organims.</dd>
+          <dd>A polypeptide is a long chain of bonded amino acids. A protein consists of one or more polypeptide chains.</dd>
+          <dd>Proteins serve many different roles in living things. Some of these rolls are:</dd>
+          <dd>- Helping cells keep their structure</dd>
+          <dd>- Make up tissue cells</dd>
+          <dd>- Sending and recieving signals</dd>
+          <dd>- Some, called enzymes, help speed up chemical reactions in cells</dd>
+          <dd>- Some, called anitbodies, target substances like bacteria for destruction</dd>\
+          <dd>- Carry messages</dd>
+          <dd>- Transport materials</dd>
           <dt>Lipids</dt>
+          <dd>A lipid is an organic compound such as fat or oil.</dd>
+          <dd>Lipids are mainly used to store energy, and consist of repeating units called fatty acids.</dd>
+          <dd>There are two main fatty acids: saturated fatty acids and unsaturated fatty acids.</dd>
+          <dd>Saturated Fatty Acids</dd>
+          <dd>- Carbon atoms are bonded to as many hydrogen atoms as possible.</dd>
+          <dd>- Very straight, creating a solid at room temperature.</dd>
+          <dd>- Used by animals to store energy</dd>
+          <dd>Unsaturated Fatty Acids</dd>
+          <dd>- Carbon atoms are bonded to hydrogen atoms in groups, causing the chains to bend.</dd>
+          <dd>- Liquid at room temperature</dd>
+          <dd>- Used by plants to store energy</dd>
+          <dd>There are different types of lipids that also contain alcohol or phosphate groups. These lipids are:</dd>
+          <dd>- Triglycerids</dd>
+          <dd>- Phospholipids</dd>
+          <dd>- Steroids</dd>
           <dt>Nucleic Acid</dt>
+          <dd>A nucleic acid is an organic compound, such as DNA or RNA, that is built of small units called nucleotides.</dd>
+          <dd>Many nucleotides binded together form a chain called a polynucleotide. RNA consists of just one polynucleotide chain. DNA consists of two polynucleotide chains.</dd>
+          <dd>Each nucleotide consists of three smaller molecules:</dd>
+          <dd>- Sugar</dd>
+          <dd>- Phosphate groups</dd>
+          <dd>- Nitrogen base</dd>
+          <dd>There are four different types of nitrogen bases, which are:</dd>
+          <dd>- Cytosine</dd>
+          <dd>- Adenine</dd>
+          <dd>- Guanine</dd>
+          <dd>- Thymine</dd>
+          <dd>Hydrogen bonds between complementary nitrogen bases, which are: Cytosine+Guanine and Adenine+Thymine.</dd>
+          <dd>The role of nucleic acid is to store and show the correct sequence of amino acids in a protein.</dd>
           <dt>Biochemical Reactions</dt>
+          <dd>A chemical reaction is a process that changes some chemical substances into others.</dd>
+          <dd>Two parts of a chemical reaction:</dd>
+          <dd>- Reactant: the substance that starts a chemical reaction</dd>
+          <dd>- Product: the substance that forms as a result of a chemical reaction</dd>
+          <dd>In a chemical reaction, the quantity of an element doesn't change; there is the same amount of elements in the products as there was the reactants.</dd>
         </dl>
       </div>
     </div>
