--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Central Airlines</title>
+    <title>Biology</title>
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
 <link href="index.css" type="text/css" rel="stylesheet">
@@ -11,7 +11,7 @@
       <div class="container">
         <h1>Biology</h1>
         <p>Isn't a Real Science</p>
-        <a class="btnA" href="flights.html">Learn More</a>
+        <a class="btnA" href="index.html">Home</a>
       </div>
     </div>
 
