--- a/foundationsOfBiology.html
+++ b/foundationsOfBiology.html
@@ -111,7 +111,7 @@
           <dd>- Make up tissue cells</dd>
           <dd>- Sending and recieving signals</dd>
           <dd>- Some, called enzymes, help speed up chemical reactions in cells</dd>
-          <dd>- Some, called anitbodies, target substances like bacteria for destruction</dd>\
+          <dd>- Some, called anitbodies, target substances like bacteria for destruction</dd>
           <dd>- Carry messages</dd>
           <dd>- Transport materials</dd>
           <dt>Lipids</dt>
