--- a/foundationsOfBiology.html
+++ b/foundationsOfBiology.html
@@ -20,6 +20,7 @@
         <ul id="horizontal-list">
           <li><a class="btnA" href="foundationsOfBiology.html">Foundations of Biology</a></li>
           <li><a class="btnA" href="flights.html">Intro to Cells</a></li>
+          <li><a class="btnA" href="cellStructureAndFunction.html">Cell Structure and Function</a></li>
           <li><a class="btnA" href="frequentFlyerProgram.html">Energy and Transport in Cells</a></li>
           <li><a class="btnA" href="apply.html">Cell Division</a></li>
           <li><a class="btnA" href="apply.html">Molecular Biology</a></li>
