--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="container">
         <ul id="horizontal-list">
           <li><a class="btnA" href="foundationsOfBiology.html">Foundations of Biology</a></li>
+          <li><a class="btnA" href="cellStructureAndFunction.html">Cell Structure and Function</a></li>
           <li><a class="btnA" href="flights.html">Intro to Cells</a></li>
           <li><a class="btnA" href="frequentFlyerProgram.html">Energy and Transport in Cells</a></li>
           <li><a class="btnA" href="apply.html">Cell Division</a></li>
