--- a/energyAndTransportInCells.html
+++ b/energyAndTransportInCells.html
@@ -82,8 +82,38 @@
         <dl>
           <dt>Structure of Chloroplast</dt>
           <dd>Grana</dd>
-          <dd>- Grana consists of thylakoid membranes, which are sac-like membranes.</dd>
+          <dd>- Grana consists of thylakoid membranes, which are sac-like membranes that are used during the first stage of photosynthesis.</dd>
           <dd>- Thylakoid membranes contain photosystems, which are groups of molecules that include chlorophyll, the pigment that makes plants green.</dd>
+          <dd>- The second phase of photosynthsis occurs outside of the thylakoid membranes in a space called the stroma.</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <h2>Energy in Animals</h2>
+        <p>Unlike plants, animals consume energy throught the process of eating and drinking. Even though the process of making or consuming energy is different, both plant and animal cells use ATP.</p>
+        <h4>Cellular Respiration</h4>
+        <p>Cellular respiration is the process in which energy is released in glucose to make ATP. This seemingly simple, yet actually complex process is the basis for all living animal cells.</p>
+        <h2>Stages of Cellular Respiration</h2>
+        <dl>
+          <dt>Glycolysis</dt>
+          <dd>- During glycolysis, a glucose molecule is broken down to form two molecules of pyruvic acid, which are called pyruvate.</dd>
+          <dt>Krebs Cycle</dt>
+          <dd>- During the Krebs cycle, the two molecules of pyruvate are then oxidized, creating two acetyl-CoA molecules and leaving two molecules of carbon dioxide.</dd>
+          <dt>Citric Acid Cycle</dt>
+          <dd></dd>
+          <dt>Electron Transport Stage</dt>
+          <dd></dd>
+        </dl>
+        <h2>Structure of a Mitochondrion</h2>
+        <dl>
+          <dt>Inner membrane</dt>
+          <dd>- The inner membrane is the second membrane, only enclosed by the outer membrane.</dd>
+          <dd>- The third stage of cellular respiration takes place <i>on</i> the inner membrane.</dd>
+          <dt>Matrix</dt>
+          <dd>- The matrix is the space enclosed by the inner membrane. It consists of most of the objects within the mitochondira, including ribosomes, granules, and DNA.</dd>
+          <dd>- The third stage of cellular respiration takes place in the matrix.</dd>
         </dl>
       </div>
     </div>
