--- a/energyAndTransportInCells.html
+++ b/energyAndTransportInCells.html
@@ -124,7 +124,7 @@
       <div class="container">
         <h2>Biology is Fun</h2>
         <p>Do you want a future in biology?</p>
-        <a class="btnA" href="biologyDoesNotExist.php">Learn More</a>
+        <a class="btnA" href="biologyDoesNotExist.html">Learn More</a>
       </div>
     </div>
 
