--- a/cellDivision.html
+++ b/cellDivision.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1>Biology</h1>
+      <h1>Cell Division</h1>
       <p>Isn't a Real Science</p>
       <a class="btnA" href="index.html">Home</a>
     </div>
@@ -35,42 +35,35 @@
 
     <div class="main">
       <div class="container">
-        <h2>What is Biology</h2>
-        <p>Biology is the study of living things or the science of life. Within biology, there are many fields of biology including, but not limited to:</p>
-        <ul>
-          <li>Biochemistry</li>
-          <li>Botany</li>
-          <li>Cellular Biology</li>
-          <li>Ecology</li>
-          <li>Evolutionary Biology</li>
-        </ul>
+        <h2>Cell Divison</h2>
+        <p>There are two main ways of cell division. These two types of cell division are mitosis and meiosis. When mitosis occurs, the one cells is just split into two, creating two clones of the first cell. When meiosis occurs, one cell is turned into four sex cells.</p>
       </div>
     </div>
 
     <div class="main">
       <div class="container">
-        <h2>Topics Covered in Biology Class</h2>
-        <p>There are multiple topics covered in biology class. In first semester, the topics that will be covered include:</p>
+        <h2>Mitosis</h2>
+        <p>Definition: A type of cell division that results in two daughter cells each having the same number and kind of chromosomes as the parent nucleus, typical of ordinary tissue growth.</p>
+        <h4>The Cell Cycle</h4>
         <dl>
-          <dt>Foundations of Biology</dt>
-          <dd>- Defining Life</dd>
-          <dd>- Molecular Biology</dd>
-          <dt>Intro to Cells</dt>
-          <dd>- Background Info</dd>
-          <dd>- Cell Structures & Functions</dd>
-          <dt>Energy and Transport in Cells</dt>
-          <dd>- Transport</dd>
-          <dd>- Energy in Plants</dd>
-          <dd>- Energy in Animals</dd>
-          <dt>Cell Division</dt>
-          <dd>- Intro to Cell Division</dd>
-          <dt>Molecular Biology</dt>
-          <dd>- Reading Instructions</dd>
-          <dd>- Changes in DNA</dd>
-          <dt>Genetics</dt>
-          <dd>- Heredity</dd>
-          <dd>- Human Genetics</dd>
+          <dt></dt>
+        </dl>
+        <h4>Stages of Mitosis</h4>
         <dl>
+          <dt>Prophase</dt>
+          <dd>Mitotic spindle (spindle fiber) forms</dd>
+          <dd>- Mitotic spindle is the a bipolar structure that segregates the chromosomes in mitosis.</dd>
+          <dd>Chromosomes condense in the middle of the cell</dd>
+          <dd>- A chromosome is a DNA molecule with the genetic code to give instructions to their specific cell.</dd>
+          <dd>Nuclolus disappears and the nuclear envelope is broken down</dd>
+          <dd>-
+          <dt>Metaphase</dt>
+          <dd>- </dd>
+          <dt>Anaphase</dt>
+          <dd>- </dd>
+          <dt>Telophase</dt>
+          <dd>- </dd>
+        </dl>
       </div>
     </div>
 
