--- a/cellStructureAndFunction.html
+++ b/cellStructureAndFunction.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <div class="container">
-      <h1>Energy and Transport in Cells</h1>
+      <h1>Cell Structure and Function</h1>
       <p>Isn't a Real Science</p>
       <a class="btnA" href="index.html">Home</a>
     </div>
@@ -25,7 +25,7 @@
           <a href="flights.html">Intro to Cells</a>
           <a href="cellStructureAndFunction.html">Cell Structure and Function</a>
           <a href="energyAndTransportInCells.html">Energy and Transport in Cells</a>
-          <a href="apply.html">Cell Division</a>
+          <a href="cellDivision.html">Cell Division</a>
           <a href="signup.html">Molecular Biology</a>
           <a href="login.html">Genetics</a>
         </div>
