--- a/cellDivision.html
+++ b/cellDivision.html
@@ -44,10 +44,6 @@
       <div class="container">
         <h2>Mitosis</h2>
         <p>Definition: A type of cell division that results in two daughter cells each having the same number and kind of chromosomes as the parent nucleus, typical of ordinary tissue growth.</p>
-        <h4>The Cell Cycle</h4>
-        <dl>
-          <dt></dt>
-        </dl>
         <h4>Stages of Mitosis</h4>
         <dl>
           <dt>Prophase</dt>
@@ -55,14 +51,53 @@
           <dd>- Mitotic spindle is the a bipolar structure that segregates the chromosomes in mitosis.</dd>
           <dd>Chromosomes condense in the middle of the cell</dd>
           <dd>- A chromosome is a DNA molecule with the genetic code to give instructions to their specific cell.</dd>
-          <dd>Nuclolus disappears and the nuclear envelope is broken down</dd>
-          <dd>-
+          <dd>Nucleolus disappears and the nuclear envelope is broken down</dd>
+          <dd>- The nuclear envelope is the double-layered membrane enclosin the nucleus of a eukaryotic cell.</dd>
           <dt>Metaphase</dt>
-          <dd>- </dd>
+          <dd>Chromosomes line up at metaphase plate</dd>
+          <dd>- The metaphase plate is a section in the equatorial plane of the metphase spindle having the chromosomes oriented upon it.</dd>
           <dt>Anaphase</dt>
-          <dd>- </dd>
+          <dd>The microtubules push the poles apart</dd>
+          <dd> - The microtubules pull chromosomes apart and towards the poles.</dd>
           <dt>Telophase</dt>
-          <dd>- </dd>
+          <dd>- Spindle fiber disappears</dd>
+          <dd>- A nuclear membrane reforms around each set of chromosomes</dd>
+          <dd>- A nucleolus reappears in each new nucleus</dd>
+          <dd>- The chromosomes start to condense as the cell starts to split</dd>
+          <dt>Cytokinesis</dt>
+          <dd>Cytokinesis in animal cells:</dd>
+          <dd>- An actin ring around the middle of the cell pinches inward, creating an indentation called the cleavage furrow.</dd>
+          <dd>Cytokinesis in plant cells:</dd>
+          <dd>- The cell plate forms down the middle of the cell, creating a new wall that partitions it in two.</dd>
+        </dl>
+
+        <h4>Cancer and Cell Regulation</h4>
+        <h6>Checkpoints</h6>
+        <p>The cell cycle is regulated by checkpoints, which are factors the cell consideres when deciding whether or not to move forward through the cell cycle, and include both external cues and internal cues.</p>
+        <h6>Cancer</h6>
+        <p>Definition: A disease caused by an unctonrolled division of abnormal cells in a part of the body.</p>
+        <p>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <h2>Meiosis</h2>
+        <p>Definition: A type of cell division that results in four dughter cells each with half the number of chromosomes of the parent cell, as in the production of gametes and plant spores.</p>
+        <h4>Stages of Meiosis</h4>
+        <dl>
+          <dt>Meiosis I</dt>
+          <dd>Prophase I<dd>
+          <dd>- The homologous chromosomes pair up and exchange fragments</dd>
+          <dd>Metaphase I</dd>
+          <dd>- The homologous pairs line up at the metaphase plate</dd>
+          <dd>Anaphase I</dd>
+          <dd>- The homologous pairs separate to opposite ends of the cell</dd>
+          <dd>- Sister chromatids stay together</dd>
+          <dd>Telophase I</dd>
+          <dd>- Each chromosome has two non-identical sister chromatids</dd>
+          <dt>Meiosis II</dt>
+          <dd>Meiosis I is repeated with both cells created in Meiosis I, creating four cells in all.</dd>
         </dl>
       </div>
     </div>
