--- a/cellDivision.html
+++ b/cellDivision.html
@@ -76,7 +76,11 @@
         <p>The cell cycle is regulated by checkpoints, which are factors the cell consideres when deciding whether or not to move forward through the cell cycle, and include both external cues and internal cues.</p>
         <h6>Cancer</h6>
         <p>Definition: A disease caused by an unctonrolled division of abnormal cells in a part of the body.</p>
-        <p>
+        <dl>
+          <dt>Cancer is caused by two main types of cell cycle regulator mutations.</dt>
+          <dd>Positive regulators, which normally promote cell growth, may become hyperactivated (oncogenic).</dd>
+          <dd>Negative regulators (tumor suppressors), which prevent the formation of tumors, may become inactivated.</dd>
+        </dl>
       </div>
     </div>
 
