--- a/biologyDoesNotExist.html
+++ b/biologyDoesNotExist.html
@@ -26,7 +26,7 @@
           <a href="cellStructureAndFunction.html">Cell Structure and Function</a>
           <a href="energyAndTransportInCells.html">Energy and Transport in Cells</a>
           <a href="cellDivision.html">Cell Division</a>
-          <a href="signup.html">Molecular Biology</a>
+          <a href="molecularBiology.html">Molecular Biology</a>
           <a href="login.html">Genetics</a>
         </div>
       </div>
