--- a/cellDivision.html
+++ b/cellDivision.html
@@ -26,7 +26,7 @@
           <a href="cellStructureAndFunction.html">Cell Structure and Function</a>
           <a href="energyAndTransportInCells.html">Energy and Transport in Cells</a>
           <a href="cellDivision.html">Cell Division</a>
-          <a href="signup.html">Molecular Biology</a>
+          <a href="molecularBiology.html">Molecular Biology</a>
           <a href="login.html">Genetics</a>
         </div>
       </div>
@@ -72,9 +72,9 @@
         </dl>
 
         <h4>Cancer and Cell Regulation</h4>
-        <h5>Checkpoints</h5>
+        <h6>Checkpoints</h6>
         <p>The cell cycle is regulated by checkpoints, which are factors the cell consideres when deciding whether or not to move forward through the cell cycle, and include both external cues and internal cues.</p>
-        <h5>Cancer</h5>
+        <h6>Cancer</h6>
         <p>Definition: A disease caused by an unctonrolled division of abnormal cells in a part of the body.</p>
         <dl>
           <dt>Cancer is caused by two main types of cell cycle regulator mutations.</dt>
