--- a/biologyDoesNotExist.html
+++ b/biologyDoesNotExist.html
@@ -27,7 +27,7 @@
           <a href="energyAndTransportInCells.html">Energy and Transport in Cells</a>
           <a href="cellDivision.html">Cell Division</a>
           <a href="molecularBiology.html">Molecular Biology</a>
-          <a href="login.html">Genetics</a>
+          <a href="genetics.html">Genetics</a>
         </div>
       </div>
     </div>
