--- a/genetics.html
+++ b/genetics.html
@@ -10,7 +10,7 @@
   <div class="header">
     <div class="container">
       <h1>Biology</h1>
-      <p>Isn't a Real Science</p>
+      <p>Genetics</p>
       <a class="btnA" href="index.html">Home</a>
     </div>
   </div>
@@ -35,42 +35,12 @@
 
     <div class="main">
       <div class="container">
-        <h2>What is Biology</h2>
-        <p>Biology is the study of living things or the science of life. Within biology, there are many fields of biology including, but not limited to:</p>
-        <ul>
-          <li>Biochemistry</li>
-          <li>Botany</li>
-          <li>Cellular Biology</li>
-          <li>Ecology</li>
-          <li>Evolutionary Biology</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="main">
-      <div class="container">
-        <h2>Topics Covered in Biology Class</h2>
-        <p>There are multiple topics covered in biology class. In first semester, the topics that will be covered include:</p>
+        <h2>Predicting Heredity</h2>
+        <p>Predicting heredity is mostly dependent on Mendel's Laws.</p>
         <dl>
-          <dt>Foundations of Biology</dt>
-          <dd>- Defining Life</dd>
-          <dd>- Molecular Biology</dd>
-          <dt>Intro to Cells</dt>
-          <dd>- Background Info</dd>
-          <dd>- Cell Structures & Functions</dd>
-          <dt>Energy and Transport in Cells</dt>
-          <dd>- Transport</dd>
-          <dd>- Energy in Plants</dd>
-          <dd>- Energy in Animals</dd>
-          <dt>Cell Division</dt>
-          <dd>- Intro to Cell Division</dd>
-          <dt>Molecular Biology</dt>
-          <dd>- Reading Instructions</dd>
-          <dd>- Changes in DNA</dd>
-          <dt>Genetics</dt>
-          <dd>- Heredity</dd>
-          <dd>- Human Genetics</dd>
-        <dl>
+          <dt>Mendel's Laws</dt>
+          <dd> </dd>
+        </dl>
       </div>
     </div>
 
