--- a/energyAndTransportInCells.html
+++ b/energyAndTransportInCells.html
@@ -25,9 +25,9 @@
           <a href="flights.html">Intro to Cells</a>
           <a href="cellStructureAndFunction.html">Cell Structure and Function</a>
           <a href="energyAndTransportInCells.html">Energy and Transport in Cells</a>
-          <a href="apply.html">Cell Division</a>
-          <a href="signup.html">Molecular Biology</a>
-          <a href="login.html">Genetics</a>
+          <a href="cellDivision.html">Cell Division</a>
+          <a href="molecularBiology.html">Molecular Biology</a>
+          <a href="genetics.html">Genetics</a>
         </div>
       </div>
     </div>
