--- a/genetics.html
+++ b/genetics.html
@@ -36,10 +36,77 @@
     <div class="main">
       <div class="container">
         <h2>Predicting Heredity</h2>
-        <p>Predicting heredity is mostly dependent on Mendel's Laws.</p>
+        <p>Predicting heredity is mostly dependent on Mendel's Laws. These laws are the basis for how genetics and heridity work.</p>
+
+        <h4>Mendelian Inheritance</h4>
+        <p>Mendelian inheritance refers to the inheritance of traits controlled by a single gene with two alleles, one of which may be completely dominant to the other.</p>
         <dl>
-          <dt>Mendel's Laws</dt>
-          <dd> </dd>
+          <dt>Genotype</dt>
+          <dd>A genotype is all of the alleles a individual inherits.</dd>
+          <dd>Homozygote: an organism with two alleles of the same type (BB)</dd>
+          <dd>Heterozygote: an organism with two different alleles (Bb)</dd>
+          <dt>Phenotype</dt>
+          <dd>A phenotype is the expression of an organism's genotype.</dd>
+          <dd>In a heterozygote, the dominant allele is expressed while the recessive allele isn't.</dd>
+        </dl>
+
+        <p>Punnett squares help predict heredity using Mendel's Laws. One example of a punnett square is shown below.</p>
+        <table style="width:25%">
+          <tr>
+            <td></td>
+            <td>B</td>
+            <td>b</td>
+          </tr>
+          <tr>
+            <td>B</td>
+            <td>BB</td>
+            <td>Bb</td>
+          </tr>
+          <tr>
+            <td>b</td>
+            <td>Bb</td>
+            <td>bb</td>
+          </tr>
+        </table>
+
+        <h4>Non-Mendelian Inheritance</h4>
+        <p>In Non-Mendelian inheritance, Mendel's Laws do not apply. Traits are not controlled by a single gene, there can be more than two alleles to a gene, and there are different types of dominance.</p>
+        <dl>
+          <dt>Types of Dominance</dt>
+          <dd>Codominance</dd>
+          <dd>- Occurs when both alleles are expressed equally in the phenotype of a heterozygote.</dd>
+          <dd>Incomplete Dominance</dd>
+          <dd>Occurs when the phenotype of the offspring is a mix between the phenotypes of both parents. This means a completely dominant allele does not occur.</dd>
+          <dt>Multiple Alleles</dt>
+          <dd>Polygenic Characteristics</dd>
+          <dd>- Characteristics that are controlled by more than one gene that can have more than two alleles.</dd>
+          <dd>- If the genes are located on the same chromosome, they are likely to be inherited together, even though it is possible they will be separated by crossing-over during meiosis.</dd>
+          <dd>- If genes are non-homologous chromosomes, they may be recombined in various ways because of independent assortment.</dd>
+          <dt>Environment vs. Phenotype</dt>
+          <dd>Phenotype is also controlled by other factors, such as the environment. Two examples of phenotypes that can be affected by the environment are:</dd>
+          <dd>- Height: poor nutrition can affect how tall humans grow</dd>
+          <dd>- Skin Color: the amount of exposure to the sun can increase the amount of pigment in skin and make it appear darker</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="main">
+      <div class="container">
+        <h2>Genetic Linkage</h2>
+        <p>Linked genes are genes that are on the same chromosome. Alleles for the genes tend to segregate together during meiosis and are only sometimes separated by crossing-over. Crossing-over occurs when two homologous chromosomes exchange genetic material during meiosis I.</p>
+
+        <dl>
+          <dt>Sex-Linked Genes</dt>
+          <dd>Sex-linked genes are genes located on the sex chromosomes. Moste of them are on the X chromosome because the Y chromosome has relatively few genes.</dd>
+          <dd>Sex-linked genes are actually X linked genes, but are normally referred to as sex-linked genes.</dd>
+          <dt>Linkage Map</dt>
+          <dd>Linkage is assessed by determining how often crossing-over between two genes on the same chromosome occurs.</dd>
+          <dd>Non-Homologous Chromosomes</dd>
+          <dd>- Not linked</dd>
+          <dd>- Assort independently during meiosis, so they have a 50% chance of ending up in different gametes.</dd>
+          <dd>Homologous Chromosomes</dd>
+          <dd>- Linked</dd>
+          <dd>- Show up in different gametes less than 50% of the time, so they are assumed to be inherited together.</dd>
         </dl>
       </div>
     </div>
